test_programs/compile_failure/invalid_ident_unwrap/src/main.nr

    #[make_bar]
    pubunfn foo((((((((((((&(((((((((((((((((((((((((((((((()(((fn main() {
  round::<3, = 2
      // 3/2*2 2>([1, 2, 2, 3];
         ]);
}

fn rou